tests/rosetta/out/C/boyer-moore-string-search.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:46Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:46Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int indexOfStr(char *h, char *n) {
  __auto_type hlen = strlen(h);
  __auto_type nlen = strlen(n);
  if (nlen == 0) {
    return 0;
  }
  __auto_type i = 0;
  while (i <= hlen - nlen) {
    if ((strcmp(slice_string(h, i, i + nlen), n) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

int stringSearchSingle(char *h, char *n) { return indexOfStr(h, n); }

list_int stringSearch(char *h, char *n) {
  list_int result = list_int_create(0);
  __auto_type start = 0;
  __auto_type hlen = strlen(h);
  __auto_type nlen = strlen(n);
  while (start < hlen) {
    __auto_type idx = indexOfStr(slice_string(h, start, hlen), n);
    if (idx >= 0) {
      result = 0;
      start = start + idx + nlen;
    } else {
      break;
    }
  }
  return result;
}

char *display(list_int nums) {
  __auto_type s = "[";
  __auto_type i = 0;
  while (i < nums.len) {
    if (i > 0) {
      char *tmp1 = concat_string(s, ", ");
      s = tmp1;
    }
    char *tmp2 = _str(nums.data[i]);
    char *tmp3 = concat_string(s, tmp2);
    s = tmp3;
    i = i + 1;
  }
  char *tmp4 = concat_string(s, "]");
  s = tmp4;
  return s;
}

int mochi_main() {
  list_string texts = list_string_create(6);
  texts.data[0] = "GCTAGCTCTACGAGTCTA";
  texts.data[1] = "GGCTATAATGCGTA";
  texts.data[2] = "there would have been a time for such a word";
  texts.data[3] = "needle need noodle needle";
  texts.data[4] = "DKnuthusesandprogramsanimaginarycomputertheMIXanditsassociat"
                  "edmachinecodeandassemblylanguages";
  texts.data[5] = "Nearby farms grew an acre of alfalfa on the dairy's behalf, "
                  "with bales of that alfalfa exchanged for milk.";
  list_string patterns = list_string_create(6);
  patterns.data[0] = "TCTA";
  patterns.data[1] = "TAATAAA";
  patterns.data[2] = "word";
  patterns.data[3] = "needle";
  patterns.data[4] = "and";
  patterns.data[5] = "alfalfa";
  __auto_type i = 0;
  while ((i < 6)) {
    char *tmp5 = _str(i + 1);
    char *tmp6 = concat_string("text", tmp5);
    char *tmp7 = concat_string(tmp6, " = ");
    char *tmp8 = concat_string(tmp7, texts.data[i]);
    char *tmp9 = _str(i + 1);
    char *tmp10 = concat_string("text", tmp9);
    char *tmp11 = concat_string(tmp10, " = ");
    char *tmp12 = concat_string(tmp11, texts.data[i]);
    printf("%d\n", tmp12);
    i = i + 1;
  }
  printf("\n");
  __auto_type j = 0;
  while ((j < 6)) {
    __auto_type idxs = stringSearch(texts.data[j], patterns.data[j]);
    char *tmp13 = concat_string("Found \"", patterns.data[j]);
    char *tmp14 = concat_string(tmp13, "\" in 'text");
    char *tmp15 = _str(j + 1);
    char *tmp16 = concat_string(tmp14, tmp15);
    char *tmp17 = concat_string(tmp16, "' at indexes ");
    char *tmp18 = concat_string(tmp17, display(idxs));
    char *tmp19 = concat_string("Found \"", patterns.data[j]);
    char *tmp20 = concat_string(tmp19, "\" in 'text");
    char *tmp21 = _str(j + 1);
    char *tmp22 = concat_string(tmp20, tmp21);
    char *tmp23 = concat_string(tmp22, "' at indexes ");
    char *tmp24 = concat_string(tmp23, display(idxs));
    printf("%d\n", tmp24);
    j = j + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
